<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/workExperienceActivityConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkExperienceActivity">

    <TextView
        android:id="@+id/workExperienceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/work_experience"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/workExperience1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:text="@string/graduate_android_developer_nabsa_group_limited_nmay_2021_present_ntasks_development_testing_proof_of_concepts_converting_linear_layouts_to_constraint_layouts_unit_testing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workExperienceTitle" />

    <TextView
        android:id="@+id/workExperience2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:text="@string/ncandidate_fellow_n_allan_gray_orbis_foundation_njanuary_2017_december_2021_ntasks_participating_in_various_activities_that_contribute_to_personal_academic_and_entrepreneurial_development_this_was_my_scholarship_program_for_university"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workExperience1" />

    <TextView
        android:id="@+id/workExperience3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:text="@string/nfinancial_assistant_n_q_fit_napril_2020_july_2020_ntasks_i_worked_overseeing_the_finances_of_an_online_fitness_start_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workExperience2" />
</androidx.constraintlayout.widget.ConstraintLayout>